--- a/templates/base_bootstrap.html
+++ b/templates/base_bootstrap.html
@@ -31,5 +31,11 @@
 
 {% block content %}
 <div class="container">
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
