--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>titlessss</title>
-</head>
-<body>
-    <h2> hello world3 <h2>
-</body>
-</html>
+{% extends "base_bootstrap.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %} FlaskyForm {% endblock %}
+{% block content %}
+<div class="page-header">
+    <h1>hello,{% if name %}{{name}}{% else %}Stranger{% endif %}!</h1>
+</div>
+{{wtf.quick_form(form)}}
+{% endblock %}
